@@ -3,6 +3,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 
 ==06/17/2009==
 Derision: Removed redundant flymode on/off in water code (not needed since Rev161).
+Trevius: New fields added to the alt_vars table to allow SoF and Titanium to both use it.
+
+Required SQL: /utils/sql/svn/687_aa_table_changes.sql
 
 ==06/16/2009==
 Derision: Old corpses summoned by Expedient Recovery will no longer rebury after 5 seconds.
